Fixed bug with flexbox image on safari

--- a/css/imports/details.css
+++ b/css/imports/details.css
@@ -12,7 +12,7 @@
     margin-left: 50%;
     transform: translateX(-50%);
     max-width: 300px;
-    align-self: self-start;
+    align-self: center;
 }
 
 .value {
