--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@
 
 .details-image {
     max-width: 375px;
+    align-self: center;
 }
 
 .errorMessage {
